--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "jamstack-ethereal",
+    "name": "site-fotografie-ethereal",
     "version": "0.0.1",
-    "description": "JAMstack - Blazing fast app with Ethereal design by Pixelarity",
+    "description": "Site Fotografie - Ethereal Design. Un produs WebsiteMarket",
     "main": "Gruntfile.js",
     "devDependencies": {
         "autoprefixer": "^6.3.6",
@@ -29,13 +29,13 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/app-generator/priv-jamstack-ethereal"
+        "url": "https://github.com/creare-site/site-fotografie-ethereal"
     },
     "bugs": {
-        "url": "https://github.com/app-generator/priv-jamstack-ethereal/issues",
-        "email": "support@appseed.us"
+        "url": "https://github.com/creare-site/site-fotografie-ethereal/issues",
+        "email": "hello@websitemarket.ro"
     },
-    "author": "AppSeed <support@appseed.us> (https://appseed.us)",
+    "author": "WebsiteMarket <hello@websitemarket.ro> (https://websitemarket.ro)",
     "license": "Commercial",
     "private": false,
     "dependencies": {
